--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,9 @@
 {
+  "version": 2,
   "rewrites": [
-    {
-      "source": "/about",
-      "destination": "/views/about.html"
-    }
+    { "source": "/(.*)", "destination": "/server.js" }
   ],
+  "cleanUrls": true,
   "routes": [
     {
       "src": "/(.*)",
