--- a/vercel.json
+++ b/vercel.json
@@ -1,13 +1,15 @@
 {
   "version": 2,
-  "rewrites": [
-    { "source": "/(.*)", "destination": "/server.js" }
-  ],
-  "cleanUrls": true,
-  "routes": [
+  "builds": [
     {
-      "src": "/(.*)",
-      "dest": "/views/$1"
+      "src": "server.js",
+      "use": "@vercel/node"
+    }
+  ],
+  "rewrites": [
+    {
+      "source": "/(.*)",
+      "destination": "/server.js"
     }
   ]
 }
